getting_loginandhome_back

--- a/frontend/src/components/ListElement/listele.css
+++ b/frontend/src/components/ListElement/listele.css
@@ -32,9 +32,7 @@
 }
 
 .cls {
-  <<<<<<< HEAD margin-top: 0.45rem;
-  =======margin-top: 0.8rem;
-  >>>>>>>dfcaa9a1a8637daef19163ef42e4e6151fd87614
+  margin-top: 0.45rem;
 }
 
 .accordion {
