--- a/frontend/src/screens/Register/Register.css
+++ b/frontend/src/screens/Register/Register.css
@@ -27,3 +27,11 @@ form {
     justify-content: center;
     text-align: center;
 }
+
+.an {
+    text-decoration: underline;
+}
+
+.an:hover {
+    cursor: pointer;
+}
