progressBar_and_checkbox

--- a/frontend/src/components/ListElement/grid.css
+++ b/frontend/src/components/ListElement/grid.css
@@ -4,23 +4,35 @@
   color: ghostwhite;
   text-align: left;
 }
+
 .gridElementFullBox {
   color: white;
   background-color: rgb(48, 183, 255);
   border-radius: 3px;
 }
+
 .gridElementHollowBox {
   color: grey;
 }
+
 .gridElementCreateListSection {
   background-color: rgb(44, 43, 43);
 }
-.gridElementCreateListSection > Button {
+
+.gridElementCreateListSection>Button {
   width: 100%;
 }
+
 .gridElementDropdownWrapper {
   padding: 20px;
 }
+
 .gridElementCreateListTextField {
   background-color: rgb(205, 205, 205);
+}
+
+.desc {
+  text-decoration: none;
+  font-size: large;
+  color: ghostwhite;
 }
