--- a/backend/frontend/src/components/ListElement/listele.css
+++ b/backend/frontend/src/components/ListElement/listele.css
@@ -1,10 +1,16 @@
 .title {
   font-size: large;
-  margin-top: 1.15rem;
+  margin-top: 0rem;
+  margin-bottom: 0rem;
+}
+
+.custom-header {
+  height: 82%;
 }
 
 .accordion-button {
-  background-color: inherit !important;
+  /* background-color: inherit !important; */
+  background-color: #1a1a1a !important;
   border: none;
 }
 
@@ -14,14 +20,16 @@
 
 .accordion-button:focus {
   box-shadow: none;
+  background-color: #1a1a1a;
 }
+
 
 .dropdown {
   box-shadow: none;
 }
 
 .accordion-body {
-  background-color: #2d2d2d;
+  background-color: #1a1a1a;
   height: fit-content;
 }
 
@@ -32,12 +40,20 @@
 }
 
 .cls {
-  margin-top: 0.45rem;
+  margin-top: 0.15rem;
+  margin-bottom: 0rem;
+}
+
+.table-back {
+  background-color: #262d33;
 }
 
 .accordion {
   margin: 0.7%;
+  width: 70rem;
 }
+
+
 
 .zucc {
   color: rgb(0, 183, 255);
@@ -57,3 +73,7 @@
 .pg-bottom {
   margin-top: 0.1rem;
 }
+
+/* .accordion-item {
+  height: 2rem;
+} */
