--- a/backend/frontend/src/components/HomeMenu/menu.css
+++ b/backend/frontend/src/components/HomeMenu/menu.css
@@ -4,3 +4,15 @@
     border: 0%;
     margin-top: 1.7%;
 }
+
+.custom-menu-card {
+    margin-bottom: 10rem;
+}
+
+.custom-line-progress {
+    margin-bottom: 0.4rem;
+    margin-top: 0.4rem;
+    margin-left: 0.4rem;
+    margin-right: 0.4rem;
+
+}
