--- a/backend/frontend/src/components/footer/footer.css
+++ b/backend/frontend/src/components/footer/footer.css
@@ -25,3 +25,43 @@ footer {
 .end {
     height: 1rem;
 }
+
+.custom-footer {
+    margin-top: 3.4rem;
+    margin-bottom: 0%;
+    padding-bottom: 0%;
+    border-bottom: 0%;
+}
+
+
+.bottom {
+    margin-bottom: 0%;
+    padding-bottom: 0%;
+    border-bottom: 0%;
+}
+
+.mail {
+    margin-right: 0.4rem;
+}
+
+.git-icon {
+    border-radius: 80%;
+    padding: 0.75rem;
+    padding-top: 0.55rem;
+    padding-left: 0.55rem;
+    padding-right: 0.55rem;
+}
+
+.git-icon:hover {
+    background-color: #1b1b1b;
+}
+
+.git-link {
+    text-decoration: none;
+    color: inherit;
+}
+
+.git-link:hover {
+    text-decoration: none;
+    color: inherit;
+}
