--- a/backend/frontend/src/components/HomeMenu/menu.css
+++ b/backend/frontend/src/components/HomeMenu/menu.css
@@ -16,3 +16,28 @@
     margin-right: 0.4rem;
 
 }
+
+.custom-menu-card-2 {
+    margin-top: 2rem;
+}
+
+.custom-cprogress-container {
+    /* padding-top: 10%; */
+    width: 70%;
+}
+
+.cprogress {
+    margin-top: 1rem;
+    margin-bottom: 0.5rem;
+}
+
+.progress-heading {
+    color: ghostwhite;
+    font-size: 0.8rem;
+    margin-left: 0.7rem;
+    margin-bottom: 0%;
+}
+
+.progress-hard {
+    margin-bottom: 0.5rem;
+}
