--- a/backend/frontend/src/components/graphView/customNode.css
+++ b/backend/frontend/src/components/graphView/customNode.css
@@ -1,3 +1,8 @@
-.button {
-    box-shadow: none;
+.span-hover:hover {
+    cursor: pointer;
+}
+
+.offcanvas {
+    width: 55% !important;
+    background-color: #1a1a1a;
 }
