--- a/backend/frontend/src/screens/Register/Register.css
+++ b/backend/frontend/src/screens/Register/Register.css
@@ -28,10 +28,10 @@ form {
     text-align: center;
 }
 
-.an {
+.ana {
     text-decoration: underline;
 }
 
-.an:hover {
+.ana:hover {
     cursor: pointer;
 }
