--- a/backend/frontend/src/screens/login/login.css
+++ b/backend/frontend/src/screens/login/login.css
@@ -28,11 +28,12 @@ form {
     text-align: center;
 }
 
-.an {
+.ana {
     text-decoration: underline;
+    font-size: 1.07rem;
 }
 
-.an:hover {
+.ana:hover {
     cursor: pointer;
 }
 
