--- a/backend/frontend/src/components/Navbar/Navbar.css
+++ b/backend/frontend/src/components/Navbar/Navbar.css
@@ -1,10 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans&family=Open+Sans&display=swap');
+
 .an:hover {
     cursor: pointer;
+}
+
+.an {
+    font-family: 'DM Sans', sans-serif;
+    font-family: 'Open Sans', sans-serif;
+    font-size: large;
 }
 
 
 .color-nav {
     margin-bottom: 2rem;
+    background-color: #291E29;
 }
 
 .dropdown-toggle::after {
