--- a/backend/frontend/src/components/HomeMenu/menu.css
+++ b/backend/frontend/src/components/HomeMenu/menu.css
@@ -2,7 +2,13 @@
     margin: 0%;
     padding: 0%;
     border: 0%;
-    margin-top: 1.7%;
+    margin-top: 1.2%;
+    margin-bottom: 1.2%;
+}
+
+.menu-container {
+    padding-left: auto;
+    padding-right: auto;
 }
 
 .custom-menu-card {
@@ -19,6 +25,8 @@
 
 .custom-menu-card-2 {
     margin-top: 2rem;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .custom-cprogress-container {
