--- a/backend/frontend/src/components/HomeMenu/menu.css
+++ b/backend/frontend/src/components/HomeMenu/menu.css
@@ -29,6 +29,12 @@
     margin-right: auto;
 }
 
+.custom-menu-card-21 {
+    margin-top: 2rem;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .custom-menu-card-2:hover {
     cursor: pointer;
 }
